# screensaver-openmp

./: .gitignore  CMakeLists.txt  README.md
include/core/: app_config.hpp  cli.hpp  entity.hpp  field.hpp  fps_counter.hpp  random.hpp  screensaver.hpp
scripts/: build.sh  run_omp.sh  run_seq.sh
src/core/: app_config.cpp  cli.cpp  entity.cpp  field.cpp  fps_counter.cpp  random.cpp  screensaver.cpp
src/omp/: main_omp.cpp
src/seq/: main_seq.cpp
